test-cases/valid/reject/plus_bad_operand_type.ul
void main() {
    print true + 4; // Cannot add booleans 
}
